[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art/solid.png" type="Texture" id=1]
[ext_resource path="res://Scene/Test/Test.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.0891, 14.418 )

[node name="Test" type="Node2D"]
script = ExtResource( 2 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 124.28, -4.4545 )

[node name="Sprite" type="Sprite" parent="Position2D2"]
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Position2D" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Position2D"]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Position2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Position2D/Area2D"]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="Position2D/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Position2D/Area2D" to="." method="_on_Area2D_mouse_exited"]
